fix: ios dialog color issue at dark mode
It is necessary to explicitly specify the color in the dialog tag, since the color from the body tag is not inherited, but is overridden by the style sheet of the safari browser user agent on the iOS platform

inhereted: from -> user agent stylesheet dialog {color:canvastext;}
navigator.userAgent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_7_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.6.3 Mobile/15E148 Safari/604.1

--- a/components/Dialog/dialog.module.scss
+++ b/components/Dialog/dialog.module.scss
@@ -8,6 +8,12 @@
 .dialog {
 	$-bgc: conf.$body-bg;
 
+	@include mix.isomorphic-color-contrast(
+		$-bgc,
+		conf.$body-color,
+		color.invert(conf.$body-color, 100%)
+	);
+
 	position: fixed;
 	border: 0;
 	top: 0;
@@ -21,6 +27,12 @@
 
 	@media (prefers-color-scheme: dark) {
 		background-color: conf.$body-bg--dark;
+
+		@include mix.isomorphic-color-contrast(
+			conf.$body-bg--dark,
+			conf.$body-color,
+			color.invert(conf.$body-color, 100%)
+		);
 	}
 
 	&__hug {
